[gd_scene load_steps=2 format=2]

[ext_resource path="res://Widget/Attributes.gd" type="Script" id=1]

[node name="Attributes" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1120.0
script = ExtResource( 1 )

[node name="NameLine" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_right = 332.0
margin_bottom = 24.0

[node name="NameLabel" type="Label" parent="NameLine"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Name :"
align = 2
valign = 1

[node name="NameEdit" type="LineEdit" parent="NameLine"]
margin_left = 104.0
margin_right = 332.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Card name"
placeholder_alpha = 0.4

[node name="DescriptionLine" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 28.0
margin_right = 332.0
margin_bottom = 168.0

[node name="DescriptionLabel" type="Label" parent="DescriptionLine"]
margin_top = 63.0
margin_right = 100.0
margin_bottom = 77.0
rect_min_size = Vector2( 100, 0 )
text = "Description :"
align = 2
valign = 1

[node name="DescriptionEdit" type="TextEdit" parent="DescriptionLine"]
margin_left = 104.0
margin_right = 332.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
size_flags_horizontal = 3
wrap_enabled = true

[node name="PlayableAndCostLine" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 172.0
margin_right = 332.0
margin_bottom = 196.0

[node name="PlayableLabel" type="Label" parent="PlayableAndCostLine"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Playable :"
align = 2
valign = 1

[node name="PlayableCheckButton" type="CheckBox" parent="PlayableAndCostLine"]
margin_left = 104.0
margin_right = 128.0
margin_bottom = 24.0
pressed = true

[node name="CostLabel" type="Label" parent="PlayableAndCostLine"]
margin_left = 132.0
margin_top = 5.0
margin_right = 254.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "Cost :"
align = 2
valign = 1

[node name="CostSpinBox" type="SpinBox" parent="PlayableAndCostLine"]
margin_left = 258.0
margin_right = 332.0
margin_bottom = 24.0
max_value = 10.0
align = 1

[node name="ColorLine" type="HBoxContainer" parent="."]
margin_top = 200.0
margin_right = 332.0
margin_bottom = 200.0

[node name="ImagetLine" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 204.0
margin_right = 332.0
margin_bottom = 228.0

[node name="ImageLabel" type="Label" parent="ImagetLine"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Image :"
align = 2
valign = 1

[node name="ImageEdit" type="LineEdit" parent="ImagetLine"]
margin_left = 104.0
margin_right = 332.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Image file name"
placeholder_alpha = 0.4

[node name="TypeAndColorLine" type="HBoxContainer" parent="."]
margin_top = 232.0
margin_right = 332.0
margin_bottom = 252.0

[node name="TypeLabel" type="Label" parent="TypeAndColorLine"]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 17.0
rect_min_size = Vector2( 100, 0 )
text = "Type :"
align = 2
valign = 1

[node name="TypeOptionButton" type="OptionButton" parent="TypeAndColorLine"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
text = "Tile"
items = [ "Tile", null, false, 0, null, "Effect", null, false, 1, null, "Modifier", null, false, 2, null ]
selected = 0

[node name="ColorLabel" type="Label" parent="TypeAndColorLine"]
margin_left = 208.0
margin_top = 3.0
margin_right = 288.0
margin_bottom = 17.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
text = "Color :"
align = 2
valign = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="TypeAndColorLine"]
margin_left = 292.0
margin_right = 332.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
align = 0
color = Color( 1, 0, 0, 1 )
edit_alpha = false

[node name="TypeAttContainer" type="PanelContainer" parent="."]
margin_top = 256.0
margin_right = 332.0
margin_bottom = 270.0

